[package]
name = "cos-fuse-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
fuser = "0.16"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
clap = { version = "4.0", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
lru = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.0"
anyhow = "1.0"
url = "2.0"
ctrlc = "3.0"
tempfile = "3.0"
libc = "0.2"